#+HTML_DESCRIPTION: science, chemistry, physical chemistry
#+HTML_DESCRIPTION: spectroscopy, mass spectrometry, radiation, UV, ultraviolet
#+HTML_KEYWORDS: chemistry, science, spectroscopy, interaction
#+LANGUAGE:   en
#+CATEGORY:   website

#+SUBTITLE: Spectroscopy & Spectrometry
#+HTML_DOCTYPE: html5

#+NAME: banner
#+BEGIN_EXPORT html
<div class="navbar">
  <ul>
    <li class="dropdown">
       <a  href=""https://agiuliani.xyz/index.html"
class="drobtn">Home</a>
       <div class="dropdown-content">
       </div>
    </li>
    <li class="dropdown">
       <a href="https://agiuliani.xyz/research.html"
class="drobtn">Research</a>
       <div class="dropdown-content">
          <a href="https://agiuliani.xyz/research.html#sec:interplay">Electronic structure</a>
	  <a href="https://agiuliani.xyz/research.html#sec:noncov">Non covalent interactions</a>
	  <a href="https://agiuliani.xyz/research.html#sec:structchem">Structural chemistry </a>
	  <a href="https://agiuliani.xyz/tools.html">Tools</a>
       </div>
    </li>
    <li class="dropdown">
       <a href="https://agiuliani.xyz/about.html"
class="drobtn">About me</a>
       <div class="dropdown-content">
       </div>
    </li>
    <li class="dropdown">
       <a href="https://agiuliani.xyz/production.html"
class="drobtn">Production</a>
       <div class="dropdown-content">
       <a href="https://agiuliani.xyz/production.html#sec:publications">Publications</a>
       <a href="https://agiuliani.xyz/production.html#sec:proceedings">Proceedings</a>
       <a href="https://agiuliani.xyz/production.html#sec:patents">Patents </a>
       <a href="https://agiuliani.xyz/production.html#sec:chapters">Book chapters </a>
       <a href="https://agiuliani.xyz/production.html#sec:oral_comm">Oral communications </a>
       <a href="https://agiuliani.xyz/production.html#sec:posters">Posters </a>
       <a href="https://agiuliani.xyz/production.html#sec:outreach">Outreach </a>
       </div>
    </li>
    <li class="dropdown">