@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2019-01-31 Jeu 22:40 -->
+<!-- 2019-01-31 Jeu 22:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Alexandre Giuliani</title>
@@ -257,7 +257,7 @@ for the JavaScript code in this tag.
 <div class="navbar">
   <ul>
     <li class="dropdown">
-       <a  href=""https://agiuliani.xyz/index.html"
+       <a  href="https://agiuliani.xyz/index.html"
 class="drobtn">Home</a>
        <div class="dropdown-content">
        </div>
@@ -270,6 +270,7 @@ class="drobtn">Research</a>
 	  <a href="https://agiuliani.xyz/research.html#sec:noncov">Non covalent interactions</a>
 	  <a href="https://agiuliani.xyz/research.html#sec:structchem">Structural chemistry </a>
 	  <a href="https://agiuliani.xyz/tools.html">Tools</a>
+	  <a href="https://agiuilani.xyz/colleagues.html">Colleagues</a>
        </div>
     </li>
     <li class="dropdown">
@@ -300,16 +301,16 @@ class="drobtn">News</a>
   </ul>
 </div>
 
-<div id="outline-container-org660affb" class="outline-2">
-<h2 id="org660affb">News</h2>
-<div class="outline-text-2" id="text-org660affb">
+<div id="outline-container-orgedecf5a" class="outline-2">
+<h2 id="orgedecf5a">News</h2>
+<div class="outline-text-2" id="text-orgedecf5a">
 </div>
-<div id="outline-container-org5b11646" class="outline-3">
-<h3 id="org5b11646">2019</h3>
-<div class="outline-text-3" id="text-org5b11646">
+<div id="outline-container-org2b29779" class="outline-3">
+<h3 id="org2b29779">2019</h3>
+<div class="outline-text-3" id="text-org2b29779">
 </div>
 <ul class="org-ul">
-<li><a id="org1237bf1"></a><b><span class="timestamp-wrapper"><span class="timestamp">[2019-01-22 Mar]</span></span></b> New study <sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup> of radiation damage based on the DNA origami technology with our colleagues from Universität Postdam is now out in PCCP.<br></li>
+<li><a id="org44999af"></a><b><span class="timestamp-wrapper"><span class="timestamp">[2019-01-22 Mar]</span></span></b> New study <sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup> of radiation damage based on the DNA origami technology with our colleagues from Universität Postdam is now out in PCCP.<br></li>
 </ul>
 </div>
 </div>
@@ -325,7 +326,7 @@ class="drobtn">News</a>
 </div>
 </div></div>
 <div id="postamble" class="status">
-<p class="date">Created: 2019-01-31 Jeu 22:40</p>
+<p class="date">Created: 2019-01-31 Jeu 22:43</p>
 <p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="https://orgmode.org">Org</a> mode 9.2)</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
